[package]
name = "flusher-cli"
version = "0.5.0"
authors = ["Kevin Harnata <kevin.harnata@gdn-commerce.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = 'abort'

[dependencies]
structopt = "0.3.21"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
serde_json = "1.0"
env_logger = "0.8"
log = "0.4"
chrono = "0.4"
figlet-rs = "0.1.3"
derivative = "2.2.0"
getset = "0.1.1"
enum-as-inner = "0.3.3"